<resources>
    <string name="app_name">Kande-Pohe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="sign_up"><u>Dont have account ?</u></string>

    <string name="forget"><u>Forgot password ?</u></string>


    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Gallery</item>
        <item>Edit Profile</item>
        <item>My Preferences</item>
        <item>Shortlisted Profiles</item>
        <item>About Us</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="text_sign_up">By clicking ‘Sign Up Free’ you agree to our Terms</string>
    <string name="about_us">

	 \n\t<b>Kande-Pohe.com</b> is Marathi matrimony, handcrafted especially for all you Marathi breed, existing anywhere on the planet earth or on the Mars for that matter, with a sole purpose of helping you find your life partner.


	\n\n\tDay and night, we are working to bring all lovely Marathi soon-to-be brides and grooms at Kande-Pohe.com, who can be best matches for you. We just want you to find your soul mate at Kande-Pohe.com!


	\n\n\tWe, at Kande-Pohe.com, want to provide a highly safe and secure experience to all our registered users, and want to ensure that they are getting plenty of choices to select their partner from thousands of suitable matches.


	\n\n\tWe are deliberately working towards making your search more intuitive and we are very optimistic that you will find your life partner here.


	\n\n\tWith our enthusiastic team, who is having innovative thinking, we hope that we would be able to make your partner search more lovely and we would be able to build lifelong relationships between two families.


	\n\n\tWe are  team Kande-Pohe… and we build lifelong relationships!

    </string>
    <string name="name">Vikrant A</string>
    <string name="for_all">-Select-</string>
    <string name="title_activity_profile_cover">ProfileCoverActivity</string>
</resources>
