<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="via.vik.mydrawer.LoginActivity"
    android:background="@color/bg_login"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

           >

            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/text_input_right_margin"
                android:layout_marginTop="@dimen/text_input_top_margin"
                android:layout_marginLeft="@dimen/text_input_left_margin"
                android:textColorHint="@color/text_color"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:fontFamily="sans-serif"
                    android:theme="@style/EditTextColorCustom"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="foo@example.com"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/text_input_right_margin"
                android:layout_marginLeft="@dimen/text_input_left_margin"
                  android:layout_height="wrap_content"
                android:textColorHint="@color/text_color"
                android:theme="@style/TextLabel"
                >

                <EditText
                    android:fontFamily="sans-serif"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:text="hello"
                    android:textColor="@color/text_color"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:fontFamily="sans-serif"
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/login_btn_margin"
                android:layout_gravity="center"
                android:text="@string/action_log_in"
                android:textStyle="bold"
                android:textSize="25sp"
                android:background="@color/blue_button"
                android:textColor="@color/text_color"/>

            <ImageButton
                android:fontFamily="sans-serif-condensed"

                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/login_btn_margin"
                android:background="@drawable/loginfb"
                />

            <ImageButton
                android:fontFamily="sans-serif-condensed"
    android:visibility="gone"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/login_btn_margin"
                android:background="@drawable/logingoogle"
                />

        </LinearLayout>


    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:fontFamily="sans-serif"
        android:id="@+id/link"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:autoLink="all"
        android:linksClickable="true"
        android:textStyle="italic"
        android:textColor="@color/hyper_text"
        android:layout_marginRight="10dp"
        android:onClick="callsignup"
        />

        <TextView
            android:fontFamily="sans-serif"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:autoLink="all"
            android:layout_marginLeft="10dp"
            android:linksClickable="true"
            android:textStyle="italic"
            android:textColor="@color/hyper_text"
            android:onClick="callpassword"
            />


    </RelativeLayout>

</LinearLayout>
